# test

./: README.md  docker-compose.yaml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/application/: app.py  data.json  models.py  schemas.py  worker.py
front/: .env.example  Dockerfile  README.md  nuxt.config.js  package.json
front/components/: FlightsList.vue  TaskControl.vue
front/pages/: index.vue
front/store/flights/: actions.js  mutations.js  state.js
