[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dmitriy Guschin <me@shama.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.5"
motor = "^3.1.1"
celery = "^5.2.7"
requests = "^2.28.2"
redis = "^4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
